# localai-family-wellness

./: .env.txt  .gitignore  MIGRATION_GUIDE.md  README.md  README_MIGRATIONS.md  backendNotes.md  compareBranch_Main.md  create_local_db.sh  create_migration.sh  direct_migrations.sh  docker-compose.override.yml  docker-compose.yml  fix_version.sh  local_migrate.sh  make_executable.sh  manual_migration.sh  markdownFiles_in_Project.md  markdownFiles_paths.md  migrate.sh  older_ultimateREADME.md  poetry_migrations.sh  postgres_migrations.sh  run_migrations_docker.sh  setup_database.sh  setup_database_complete.sh  setup_pgvector.sh  update_git_files.sh  whatSTEPSNEXT.md
backend/: .dockerignore  .env.example  Dockerfile  SQLALCHEMY_UPGRADE.md  alembic.ini  create_tables.sql  filesNEEDINGalignment.md  model_upgrade_notes.md  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/app/: AUTHENTICATION_AND_MIGRATION_SETUP.md  backendFixes.md  backendRecentNamingFixes.md  main.py
backend/app/ai/: memory.py  service.py  tool_models.py
backend/app/api/: router.py
backend/app/api/v1/: README_v1.md  ai.py  auth.py  chores.py  families.py  screen_time.py  users.py
backend/app/auth/: README.md  dependencies.py  service.py
backend/app/core/: config.py
backend/app/crud/: ai_memory_crud.py  chore_crud.py  family_crud.py  screen_time_crud.py  user_crud.py
backend/app/db/: base.py  session.py
backend/app/db/models/: ai_memory.py  chore_model.py  family_model.py  screen_time_model.py  user_model.py
backend/app/schemas/: ai_schemas.py  chore_schemas.py  msg_schemas.py  screen_time_schemas.py  token_schemas.py  user_schemas.py
backend/app/tools/: client.py  registry.py  tools_config.json
backend/app/utils/: zeroconf_service.py
config/postgres/init-scripts/: 01_init_pgvector.sql
docs/: MIGRATION_GUIDE.md  alembic_migrations_guide.md
tool-servers/screen-tool/: Dockerfile  main.py  pyproject.toml
